# WAQI-ETL-2024

./: .gitignore  LICENSE  README.md  out.txt  pyproject.toml  requirements.txt  test.json
.github/workflows/: workflow.yml
airflow/: .env-sample  Dockerfile  docker-compose.yaml  requirements.txt
airflow/dags/: air_quality_etl.py
airflow/dags/src/: clickhouse.py
dwh/: .env-sample  air_quality_data.sql  check_air_quality_data.ps1  check_air_quality_data.sh  createTables.sql  docker-compose.yaml  sampleInsert.sql  setup_dwh.ps1  setup_dwh.sh
